AC-952: Create unit test for Magento2\Less\SemicolonSpacingSniff check - Refactor: Fix wrong index and adapt tests accordingly

--- a/Magento2/Tests/Less/SemicolonSpacingUnitTest.less
+++ b/Magento2/Tests/Less/SemicolonSpacingUnitTest.less
@@ -4,10 +4,10 @@
 //  */
 
 .nav {
-    background-color: green
+    background-color: green;
 }
 
 .nav-list {
-    background-color: red
-    color: white
+    background-color: red  ;
+    color: red
 }
